--- a/.github/workflows/ci-develop.yml
+++ b/.github/workflows/ci-develop.yml
@@ -310,7 +310,7 @@ jobs:
         id: get-scheduled-task-name
         run: |
           SCHEDULEDTASKNAME=$(aws events list-rules --query "Rules[*]|[?contains(Name,'Distr')].Name" --output text)
-          echo "::set-output name=scheduledtaskname:${SCHEDULEDTASKNAME}"
+          echo "::set-output name=scheduledtaskname::${SCHEDULEDTASKNAME}"
       - name: Create new target config for the distribution scheduled task
         id: update-scheduled-task-distribution
         run: |
